--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,8 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;}
+  box-sizing: border-box;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
@@ -11315,53 +11316,8 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 
-#pagelogo{font-family: 'Kaushan Script', cursive;
-  text-transform: capitalize;
-  font-size:25px;
-  padding: 0;
-  margin: 0;}
-
-.masthead-subheading{display: inline-block;} 
-
-
-.circulos{margin-left: 200px;
-   padding: 0;
-   display: inline-block;
-   width: 105px;} 
-.masthead{margin: 0;
-   padding: 0;}
-.portada{display: inline-block;
-   border:1px solid black;}   
-
-
-.circulo1{border: 6px solid ghostwhite;
-   border-radius:100px;
-   width:150px;
-   height:150px;
-   display: inline-block;
-   padding:0;
-   margin-bottom: 50px;
-   box-shadow: 0 0 10px black;}
-.circulo2{border: 6px solid ghostwhite;
-   border-radius: 100%;
-   width:100px;
-   height:100px;
-   display: inline-block;
-   padding:0;
-   margin-left: 30px;
-   box-shadow: 0 0 10px black;} 
-.circulo3{border: 6px solid ghostwhite;
-   border-radius: 100px;
-   width:150px;
-   height:150px;
-   display: inline-block;
-   padding:0;
-   margin-top: 50px;
-   box-shadow: 0 0 10px black;}   
-.circulos a{text-decoration: none;
-   color:white;} 
-
-.circulos p {margin-top: 50px;}     
+.pagelogo{font-family: 'Kaushan Script', cursive;
+}
 
 .contactar{color:white;
    background-color: #222222;
