--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-}
+  box-sizing: border-box;}
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
@@ -10943,29 +10942,13 @@ p {
   }
 }
 header.masthead {
-  padding-top: 10.5rem;
-  padding-bottom: 6rem;
+  padding-top:6rem;
   text-align: center;
-  color: #fff;
   background-image: url("../assets/img/header-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
-}
-header.masthead .masthead-subheading {
-  font-size: 1.5rem;
-  font-style: italic;
-  line-height: 1.5rem;
-  margin-bottom: 25px;
-  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-header.masthead .masthead-heading {
-  font-size: 3.25rem;
-  font-weight: 700;
-  line-height: 3.25rem;
-  margin-bottom: 2rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 @media (min-width: 768px) {
@@ -10973,17 +10956,14 @@ header.masthead .masthead-heading {
     padding-top: 17rem;
     padding-bottom: 12.5rem;
   }
-  header.masthead .masthead-subheading {
-    font-size: 2.25rem;
-    font-style: italic;
-    line-height: 2.25rem;
-    margin-bottom: 2rem;
-  }
+  
+  
   header.masthead .masthead-heading {
     font-size: 4.5rem;
     font-weight: 700;
     line-height: 4.5rem;
     margin-bottom: 4rem;
+    color:#0baccc;
   }
 }
 #portfolio .portfolio-item {
@@ -11316,8 +11296,69 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 
-.pagelogo{font-family: 'Kaushan Script', cursive;
-}
+#pagelogo{font-family: 'Kaushan Script', cursive;
+  text-transform: capitalize;
+  font-size:25px;
+  padding: 0;
+  margin: 0;}
+
+.masthead-subheading{display: inline-block;} 
+
+.textslogan1{color:white;
+  font-family: 'Lobster', cursive;
+  font-size: 80px;
+  text-shadow: 0 0 10px purple, 0 0 12px purple;}
+.textslogan2{color:#6610f2;
+  font-size: 50px;
+  font-family: 'Lobster', cursive;
+  text-shadow:0 0 5px white;}
+.textslogan3{color:#6610f2;
+    font-size: 50px;
+    font-family: 'Lobster', cursive;
+    text-shadow:0 0 5px white;}
+.cuadradoslogan{border:1px solid white;
+    width:400px;
+    height:150px;
+    margin-left:14px;
+    box-shadow:0 0 12px white, 0 0 14px white;}    
+  
+
+.circulos{padding: 0;
+   display: inline-block;
+   margin-top: 7rem;
+   margin-bottom:1.5rem;}
+.circulo1{border: 3px solid #6610f2;
+   border-radius:100px;
+   width:100px;
+   height:100px;
+   display: inline-block;
+   padding:0;
+   margin-bottom: 0px;
+   box-shadow: 0 0 10px white, 0 0 12px white, 0 0 14px white, 0 0 16px white;}
+.circulo2{border: 3px solid #6610f2;
+   border-radius: 100%;
+   width:100px;
+   height:100px;
+   display: inline-block;
+   padding:0;
+   margin-left: 30px;
+   margin-right: 30px;
+   box-shadow: 0 0 10px white, 0 0 12px white, 0 0 14px white, 0 0 16px white;} 
+.circulo3{border: 3px solid #6610f2;
+   border-radius: 100px;
+   width:100px;
+   height:100px;
+   display: inline-block;
+   padding:0;
+   margin-top: 0px;
+   box-shadow: 0 0 10px white, 0 0 12px white, 0 0 14px white, 0 0 16px white;}   
+.circulos a{text-decoration: none;} 
+
+.circulos p {margin-top: 25px;
+  font-size:23px;
+  color:#6610f2;
+  font-family: 'Lobster', cursive;
+  text-shadow:0 0 5px white;}     
 
 .contactar{color:white;
    background-color: #222222;
